--- a/cookieConcent/cookie.html
+++ b/cookieConcent/cookie.html
@@ -7,33 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cookie Concent</title>
     <link rel="stylesheet" href="cookie.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
   </head>
   <body>
-    <span class="placeholder col-6"></span>
-    <span class="placeholder w-75"></span>
-    <span class="placeholder" style="width: 25%"></span>
-    <br>
-    <span class="placeholder col-6"></span>
-    <span class="placeholder w-75"></span>
-    <span class="placeholder" style="width: 25%"></span>
-    <br>
-    <span class="placeholder col-6"></span>
-    <span class="placeholder w-75"></span>
-    <span class="placeholder" style="width: 25%"></span>
-    <br>
-    <span class="placeholder col-6"></span>
-    <span class="placeholder w-75"></span>
-    <span class="placeholder" style="width: 25%"></span>
-    <div class="cookie">
+    <div class="lay"></div>
+    <div class="contain" id="con">
+      <span class="placeholder col-6"></span>
+      <span class="placeholder w-75"></span>
+      <span class="placeholder" style="width: 25%"></span>
+      <br />
+      <span class="placeholder col-6"></span>
+      <span class="placeholder w-75"></span>
+      <span class="placeholder" style="width: 25%"></span>
+      <br />
+      <span class="placeholder col-6"></span>
+      <span class="placeholder w-75"></span>
+      <span class="placeholder" style="width: 25%"></span>
+      <br />
+      <span class="placeholder col-6"></span>
+      <span class="placeholder w-75"></span>
+      <span class="placeholder" style="width: 25%"></span>
+      <div class="cookie">
         <i class="fa-solid fa-xmark"></i>
-        <i class="fa-solid fa-cookie-bite" style="color: #ffffff;"></i>
+        <i class="fa-solid fa-cookie-bite" style="color: #ffffff"></i>
         <p>We Use Cookies To Improve The User Experience.</p>
         <button class="mybtn">Allow Cookies</button>
+      </div>
     </div>
     <script src="cookie.js"></script>
   </body>
